# DesignPatternBoilerplateCpp

./: CMakeLists.txt
src/: main.cpp
src/builder/: notes.txt
src/builder/example/: suitcase.cpp  suitcase.hpp  suitcaseBuilder.cpp  suitcaseBuilder.hpp  suitcaseDestinationBuilder.hpp  suitcaseOriginBuilder.hpp  suitcaseSpecificationBuilder.hpp
src/factory/example/: dessert.hpp  dessertFactory.hpp  mealFactory.hpp
